<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aki.bustool.activities.RegistPageActivity"
    android:background="@color/white_text"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <include layout="@layout/header_blue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:text="@string/regist"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/busline_bg"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.6"
        >
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <TextView
                    android:textSize="12sp"
                    android:gravity="bottom|right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    />
                <EditText
                    android:id="@+id/user_name"
                    android:layout_marginLeft="20dp"
                    android:textSize="12sp"
                    android:gravity="bottom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/key_user"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <TextView
                    android:gravity="bottom|right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/nick_name"
                    />
                <EditText
                    android:id="@+id/nick_name"
                    android:layout_marginLeft="20dp"
                    android:gravity="bottom"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/key_nickname"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <TextView
                    android:gravity="bottom|right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/password"
                    />
                <EditText
                    android:id="@+id/password"
                    android:layout_marginLeft="20dp"
                    android:gravity="bottom"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/key_password"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <TextView
                    android:gravity="bottom|right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="11sp"
                    android:text="@string/confirm_pass"
                    />
                <EditText
                    android:id="@+id/pass_confirm"
                    android:layout_marginLeft="20dp"
                    android:textSize="12sp"
                    android:gravity="bottom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/pass_again"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/confirm_regist"
                    android:background="@drawable/alpha_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/regist"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
