<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.6"
        ></FrameLayout>
    <LinearLayout
        android:padding="5dp"
        android:background="#ede0e0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/index_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@drawable/index"
                android:layout_weight="7"
                />
            <TextView
                android:gravity="center"
                android:id="@+id/index_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/index"
                android:textColor="@color/text_default"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/route"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/route_image"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/route"
                android:layout_weight="7"
                />
            <TextView
                android:gravity="center"
                android:id="@+id/route_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/route"
                android:textColor="@color/text_default"
                android:textSize="12sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/aboard_image"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/bus"
                android:layout_weight="7"
                />
            <TextView
                android:gravity="center"
                android:id="@+id/aboard_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/aboard"
                android:textColor="@color/text_default"
                android:textSize="12sp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/mine_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@drawable/mine"
                android:layout_weight="7"
                />
            <TextView
                android:gravity="center"
                android:id="@+id/mine_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/mine"
                android:textColor="@color/text_default"
                android:textSize="12sp"
                android:typeface="normal"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
