<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusLineShowActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <include layout="@layout/header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_button"
                />
            <TextView
                android:id="@+id/bus_name"
                android:layout_margin="5dp"
                android:gravity="center|left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.3"
                android:hint="@string/busline_message"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#00000000"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.6"
        >
        <RelativeLayout
            android:id="@+id/hide_bus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/loading"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="25sp"
                android:textColor="@color/text_default"
                />
            <ProgressBar
                android:layout_centerHorizontal="true"
                android:layout_above="@id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/busline_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/busline_bg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white_text"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text="测试1"
                    />
                <TextView
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/time_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textSize="10sp"
                    android:text="测试2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.7"
                android:background="@color/busline_bg"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@drawable/corners_bg"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:text="@string/not_design"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:background="@color/busline_bg"
                        />
                    <RelativeLayout
                        android:id="@+id/switch_line"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.9"
                        android:background="@drawable/alpha_button"
                        >
                        <LinearLayout
                            android:id="@+id/switch_blank"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/same_line"
                                android:layout_weight="3"
                                />
                            <ImageView
                                android:id="@+id/switch_icon"
                                android:padding="1dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/same_line"
                                />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <com.aki.bustool.view.BusLineView
                    android:id="@+id/bus_line"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5.5"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:background="@color/white_text"
                >
                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/waiting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/loading_data"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/loading_data"
                        />
                    <ProgressBar
                        android:layout_toLeftOf="@id/loading_data"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:visibility="visible"
                    android:id="@+id/below_title"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/click_show"
                    />
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
