<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aki.bustool.activities.SelectMapPointActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <include layout="@layout/header_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_button"
                />
            <TextView
                android:id="@+id/title"
                android:layout_margin="5dp"
                android:gravity="center|left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.3"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="#00000000"
                />
            <ImageView
                android:padding="13dp"
                android:id="@+id/clear_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                android:src="@drawable/search_clear"
                />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue_bg"
        />
        <RelativeLayout
            android:id="@+id/hide_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/loading"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="15sp"
                />
            <ProgressBar
                android:layout_centerHorizontal="true"
                android:layout_above="@id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2">
        <com.amap.api.maps2d.MapView
            android:visibility="visible"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/flag_center"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:id="@+id/target_image"
            android:layout_above="@id/flag_center"
            android:layout_centerHorizontal="true"
            android:layout_height="20dp"
            android:layout_width="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/my_location"
                />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="@color/white_text"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.1"
            >
            <TextView
                android:id="@+id/location_name"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locating"
                android:textSize="17sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/busline_bg"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            >
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm"
                android:textSize="17sp"
                android:textColor="@color/blue_bg"
                />
            <Button
                android:id="@+id/confirm_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/alpha_button"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
